Add Java 9 Module support